--- a/data/simulation/view/Vision.yaml
+++ b/data/simulation/view/Vision.yaml
@@ -2,7 +2,7 @@
 options:
   - SHOW_FIELD
   - SHOW_ROBOT
-  - SHOW_BALL
+  - SHOW_TRUTH_BALL
   - SHOW_RELATIVE_OBJECTS
   - SHOW_LOCATION_TEXT_OVERLAY
   - SHOW_OBSERVATION_TEXT_OVERLAY
