--- a/data/kicks/default.yaml
+++ b/data/kicks/default.yaml
@@ -1,7 +1,7 @@
 ---
 keyframes:
   - name: normal stand
-    frames: 100
+    frames: 50
     joints:
       HeadYaw: 0.612831876036623
       HeadPitch: -22.4978723961327
@@ -26,23 +26,23 @@ keyframes:
       RElbowYaw: -0.964409023590334
       RElbowRoll: -1.93601706636553
   - name: left balance
-    frames: 200
+    frames: 50
     joints:
       HeadYaw: 0.612831876036623
       HeadPitch: -22.4978723961327
       LHipYawPitch: -15.0024042265209
-      LHipRoll: 16.0024033727473
-      LHipPitch: -24.6072857625849
+      LHipRoll: 16.0023985346968
+      LHipPitch: -18.6072857625849
       LKneePitch: 49.8321981938704
       LAnklePitch: -24.6999850874207
-      LAnkleRoll: -21.190294187623
-      RHipYawPitch: 0.00240394179077274
-      RHipRoll: -15.0902945291325
-      RHipPitch: -33.6999850874207
+      LAnkleRoll: -16.1902936184406
+      RHipYawPitch: 0.00240394137389109
+      RHipRoll: -15.0902950983149
+      RHipPitch: -25.6999828106911
       RKneePitch: 50.7491169134831
       RAnklePitch: -28.7830652294431
-      RAnkleRoll: 20.0024053648858
-      LShoulderPitch: -88.7682300589787
+      RAnkleRoll: 16.0024053648858
+      LShoulderPitch: -88.7682232287897
       LShoulderRoll: 10.2594193997858
       LElbowYaw: -10.7934360176355
       LElbowRoll: -1.49175425435396
@@ -50,79 +50,129 @@ keyframes:
       RShoulderRoll: 28.1763378348073
       RElbowYaw: -0.964409023590334
       RElbowRoll: -1.93601706636553
-  # - name: left balance2
-  #   frames: 1000
-  #   joints:
-  #     HeadYaw: 0.612831876036623
-  #     HeadPitch: -22.4978723961327
-  #     LHipYawPitch: -15.0024042265209
-  #     LHipRoll: 16.0024033727473
-  #     LHipPitch: -24.6072857625849
-  #     LKneePitch: 49.8321981938704
-  #     LAnklePitch: -24.6999850874207
-  #     LAnkleRoll: -21.190294187623
-  #     RHipYawPitch: 0.00240394179077274
-  #     RHipRoll: -15.0902945291325
-  #     RHipPitch: -33.6999850874207
-  #     RKneePitch: 50.7491169134831
-  #     RAnklePitch: -28.7830652294431
-  #     RAnkleRoll: 20.0024053648858
-  #     LShoulderPitch: -88.7682300589787
-  #     LShoulderRoll: 10.2594193997858
-  #     LElbowYaw: -10.7934360176355
-  #     LElbowRoll: -1.49175425435396
-  #     RShoulderPitch: -89.3882951051451
-  #     RShoulderRoll: 28.1763378348073
-  #     RElbowYaw: -0.964409023590334
-  #     RElbowRoll: -1.93601706636553
-  # - name: left stand
-  #   frames: 200
-  #   joints:
-  #     HeadYaw: 0.612831876036623
-  #     HeadPitch: -22.4978723961327
-  #     LHipYawPitch: -15.0024042265209
-  #     LHipRoll: 12.0024033727473
-  #     LHipPitch: -24.6072857625849
-  #     LKneePitch: 49.8321981938704
-  #     LAnklePitch: -24.6999850874207
-  #     LAnkleRoll: -25.190294187623
-  #     RHipYawPitch: 0.00240394179077274
-  #     RHipRoll: -10.0902945291325
-  #     RHipPitch: -30.6999850874207
-  #     RKneePitch: 70.7491191902128
-  #     RAnklePitch: -50.7830629527135
-  #     RAnkleRoll: 23.0024047957034
-  #     LShoulderPitch: -88.7682300589787
-  #     LShoulderRoll: 10.2594193997858
-  #     LElbowYaw: -10.7934360176355
-  #     LElbowRoll: -1.49175425435396
-  #     RShoulderPitch: -89.3882951051451
-  #     RShoulderRoll: 28.1763378348073
-  #     RElbowYaw: -0.964409023590334
-  #     RElbowRoll: -1.93601706636553
-  # - name: left stand2
-  #   frames: 2000
-  #   joints:
-  #     HeadYaw: 0.612831876036623
-  #     HeadPitch: -22.4978723961327
-  #     LHipYawPitch: -15.0024042265209
-  #     LHipRoll: 12.0024033727473
-  #     LHipPitch: -24.6072857625849
-  #     LKneePitch: 49.8321981938704
-  #     LAnklePitch: -24.6999850874207
-  #     LAnkleRoll: -25.190294187623
-  #     RHipYawPitch: 0.00240394179077274
-  #     RHipRoll: -10.0902945291325
-  #     RHipPitch: -30.6999850874207
-  #     RKneePitch: 70.7491191902128
-  #     RAnklePitch: -50.7830629527135
-  #     RAnkleRoll: 23.0024047957034
-  #     LShoulderPitch: -88.7682300589787
-  #     LShoulderRoll: 10.2594193997858
-  #     LElbowYaw: -10.7934360176355
-  #     LElbowRoll: -1.49175425435396
-  #     RShoulderPitch: -89.3882951051451
-  #     RShoulderRoll: 28.1763378348073
-  #     RElbowYaw: -0.964409023590334
-  #     RElbowRoll: -1.93601706636553
+  - name: left stand
+    frames: 50
+    joints:
+      HeadYaw: 0.612831876036623
+      HeadPitch: -22.4978723961327
+      LHipYawPitch: -15.0024042265209
+      LHipRoll: 24.0024025189737
+      LHipPitch: -21.6072857625849
+      LKneePitch: 49.8321981938704
+      LAnklePitch: -24.6999850874207
+      LAnkleRoll: -24.190294187623
+      RHipYawPitch: 0.00240394137389109
+      RHipRoll: -22.090291114038
+      RHipPitch: -27.6999850874207
+      RKneePitch: 70.7491191902128
+      RAnklePitch: -50.78305270743
+      RAnkleRoll: 23.0024047957034
+      LShoulderPitch: -88.7682232287897
+      LShoulderRoll: 10.2594193997858
+      LElbowYaw: -10.7934360176355
+      LElbowRoll: -1.49175425435396
+      RShoulderPitch: -89.3882951051451
+      RShoulderRoll: 28.1763378348073
+      RElbowYaw: -0.964409023590334
+      RElbowRoll: -1.93601706636553
+  - name: windup
+    frames: 100
+    joints:
+      HeadYaw: 0.612831876036623
+      HeadPitch: -22.4978723961327
+      LHipYawPitch: -15.0024042265209
+      LHipRoll: 24.0024025189737
+      LHipPitch: -21.6072857625849
+      LKneePitch: 49.8321981938704
+      LAnklePitch: -24.6999850874207
+      LAnkleRoll: -24.190294187623
+      RHipYawPitch: 0.00240394137389109
+      RHipRoll: -24.0902916832204
+      RHipPitch: -7.69998451823831
+      RKneePitch: 70.7491123600238
+      RAnklePitch: -60.7830538457948
+      RAnkleRoll: 23.0024047957034
+      LShoulderPitch: -88.7682232287897
+      LShoulderRoll: 10.2594193997858
+      LElbowYaw: -10.7934360176355
+      LElbowRoll: -1.49175425435396
+      RShoulderPitch: -89.3882951051451
+      RShoulderRoll: 28.1763378348073
+      RElbowYaw: -0.964409023590334
+      RElbowRoll: -1.93601706636553
+  - name: kick
+    frames: 10
+    joints:
+      HeadYaw: 0.612831876036623
+      HeadPitch: -22.4978723961327
+      LHipYawPitch: -15.0024042265209
+      LHipRoll: 24.0024025189737
+      LHipPitch: -11.6072854779937
+      LKneePitch: 49.8321981938704
+      LAnklePitch: -24.6999850874207
+      LAnkleRoll: -24.190294187623
+      RHipYawPitch: 0.00240394137389109
+      RHipRoll: -22.090291114038
+      RHipPitch: -47.6999839490559
+      RKneePitch: 50.7491100832942
+      RAnklePitch: -0.783056086950582
+      RAnkleRoll: 23.0024047957034
+      LShoulderPitch: -88.7682232287897
+      LShoulderRoll: 10.2594193997858
+      LElbowYaw: -10.7934360176355
+      LElbowRoll: -1.49175425435396
+      RShoulderPitch: -89.3882951051451
+      RShoulderRoll: 28.1763378348073
+      RElbowYaw: -0.964409023590334
+      RElbowRoll: -1.93601706636553
+  - name: left balance
+    frames: 50
+    joints:
+      HeadYaw: 0.612831876036623
+      HeadPitch: -22.4978723961327
+      LHipYawPitch: -15.0024042265209
+      LHipRoll: 16.0023985346968
+      LHipPitch: -18.6072857625849
+      LKneePitch: 49.8321981938704
+      LAnklePitch: -24.6999850874207
+      LAnkleRoll: -16.1902936184406
+      RHipYawPitch: 0.00240394137389109
+      RHipRoll: -15.0902950983149
+      RHipPitch: -42.6999816723262
+      RKneePitch: 52.7491123600238
+      RAnklePitch: -18.7830657986255
+      RAnkleRoll: 16.0024053648858
+      LShoulderPitch: -88.7682232287897
+      LShoulderRoll: 10.2594193997858
+      LElbowYaw: -10.7934360176355
+      LElbowRoll: -1.49175425435396
+      RShoulderPitch: -89.3882951051451
+      RShoulderRoll: 28.1763378348073
+      RElbowYaw: -0.964409023590334
+      RElbowRoll: -1.93601706636553
+  - name: normal stand
+    frames: 100
+    joints:
+      HeadYaw: 0.612831876036623
+      HeadPitch: -22.4978723961327
+      LHipYawPitch: 0.00240422589561831
+      LHipRoll: -0.0902950983148785
+      LHipPitch: -24.6072857625849
+      LKneePitch: 49.8321981938704
+      LAnklePitch: -24.6999850874207
+      LAnkleRoll: -0.0902950983148785
+      RHipYawPitch: 0.00240422589561831
+      RHipRoll: 0.00240422589561831
+      RHipPitch: -24.6999850874207
+      RKneePitch: 49.7491294354963
+      RAnklePitch: -24.7830675061728
+      RAnkleRoll: 0.00240422589561831
+      LShoulderPitch: -88.7682232287897
+      LShoulderRoll: 8.2594171230561
+      LElbowYaw: -0.79343573304434
+      LElbowRoll: -1.49175425435396
+      RShoulderPitch: -89.3882951051451
+      RShoulderRoll: 8.17633726562491
+      RElbowYaw: -0.964409023590334
+      RElbowRoll: -1.93601706636553
 ...
