OK kick, falling

--- a/data/kicks/default.yaml
+++ b/data/kicks/default.yaml
@@ -1,228 +1,156 @@
 ---
 keyframes:
   - name: normal stand
-    frames: 50
-    joints:
-      HeadYaw: 0.612831876036623
-      HeadPitch: -22.4978723961327
-      LHipYawPitch: 0.00240422589561831
-      LHipRoll: -0.0902950983148785
-      LHipPitch: -24.6072857625849
-      LKneePitch: 49.8321981938704
-      LAnklePitch: -24.6999850874207
-      LAnkleRoll: -0.0902950983148785
-      RHipYawPitch: 0.00240422589561831
-      RHipRoll: 0.00240422589561831
-      RHipPitch: -24.6999850874207
-      RKneePitch: 49.7491294354963
-      RAnklePitch: -24.7830675061728
-      RAnkleRoll: 0.00240422589561831
-      LShoulderPitch: -88.7682232287897
-      LShoulderRoll: 8.2594171230561
-      LElbowYaw: -0.79343573304434
-      LElbowRoll: -1.49175425435396
-      RShoulderPitch: -89.3882951051451
-      RShoulderRoll: 8.17633726562491
-      RElbowYaw: -0.964409023590334
-      RElbowRoll: -1.93601706636553
-# - name: normal stand2
-#     frames: 50
-#     joints:
-#       HeadYaw: 0.612831876036623
-#       HeadPitch: -22.4978723961327
-#       LHipYawPitch: 0.00240422589561831
-#       LHipRoll: -0.0902950983148785
-#       LHipPitch: -24.6072857625849
-#       LKneePitch: 49.8321981938704
-#       LAnklePitch: -4.6999850874207
-#       LAnkleRoll: -0.0902950983148785
-#       RHipYawPitch: 0.00240422589561831
-#       RHipRoll: 0.00240422589561831
-#       RHipPitch: -24.6999850874207
-#       RKneePitch: 49.7491294354963
-#       RAnklePitch: -24.7830675061728
-#       RAnkleRoll: 0.00240422589561831
-#       LShoulderPitch: -88.7682232287897
-#       LShoulderRoll: 8.2594171230561
-#       LElbowYaw: -0.79343573304434
-#       LElbowRoll: -1.49175425435396
-#       RShoulderPitch: -89.3882951051451
-#       RShoulderRoll: 8.17633726562491
-#       RElbowYaw: -0.964409023590334
-#       RElbowRoll: -1.93601706636553
-  - name: left balance
     frames: 100
     joints:
-      HeadYaw: 0.612831876036623
-      HeadPitch: -22.4978723961327
-      LHipYawPitch: -15.0024042265209
-      LHipRoll: 16.0023985346968
-      LHipPitch: -18.6072857625849
-      LKneePitch: 49.8321981938704
-      LAnklePitch: -24.6999850874207
-      LAnkleRoll: -16.1902936184406
-      RHipYawPitch: 0.00240394137389109
-      RHipRoll: -15.0902950983149
-      RHipPitch: -25.6999828106911
-      RKneePitch: 50.7491169134831
-      RAnklePitch: -28.7830652294431
-      RAnkleRoll: 16.0024053648858
-      LShoulderPitch: -28.7682232287897
-      LShoulderRoll: 60.2594193997858
-      LElbowYaw: -50.7934360176355
-      LElbowRoll: -50.49175425435396
-      RShoulderPitch: -89.3882951051451
-      RShoulderRoll: 28.1763378348073
-      RElbowYaw: -0.964409023590334
-      RElbowRoll: -1.93601706636553
-  - name: left stand
+      HeadYaw: 0.612831893090224
+      HeadPitch: -22.4978798523823
+      LHipYawPitch: 0.00240422658784449
+      LHipRoll: -0.0902951008275686
+      LHipPitch: -24.607286447345
+      LKneePitch: 49.8321995805776
+      LAnklePitch: -24.6999857747604
+      LAnkleRoll: -0.0902951008275686
+      RHipYawPitch: 0.00240422658784449
+      RHipRoll: 0.00240422658784449
+      RHipPitch: -24.6999857747604
+      RKneePitch: 49.7491308198919
+      RAnklePitch: -24.7830681958245
+      RAnkleRoll: 0.00240422658784449
+      LShoulderPitch: -88.7682393593689
+      LShoulderRoll: 8.25941906044261
+      LElbowYaw: -0.793435755123701
+      LElbowRoll: -1.4917542958658
+      RShoulderPitch: -89.388297592601
+      RShoulderRoll: 8.17633749315222
+      RElbowYaw: -0.96440905042746
+      RElbowRoll: -1.93601712024011
+  - name: left balance # move left 20 # right hand 50
+    frames: 90
+    joints:
+      HeadYaw: 0.612831893090224
+      HeadPitch: -22.4978798523823
+      LHipYawPitch: 0.00240422658784449
+      LHipRoll: 20.0902951008275686 #+20
+      LHipPitch: -24.607286447345
+      LKneePitch: 49.8321995805776
+      LAnklePitch: -24.6999857747604
+      LAnkleRoll: -20.0902951008275686 #-20
+      RHipYawPitch: 0.00240422658784449
+      RHipRoll: -20.00240422658784449 #-20
+      RHipPitch: -24.6999857747604
+      RKneePitch: 49.7491308198919
+      RAnklePitch: -24.7830681958245
+      RAnkleRoll: 20.00240422658784449 #+20
+      LShoulderPitch: -88.7682393593689
+      LShoulderRoll: 8.25941906044261
+      LElbowYaw: -0.793435755123701
+      LElbowRoll: -1.4917542958658
+      RShoulderPitch: -89.388297592601
+      RShoulderRoll: 58.17633749315222
+      RElbowYaw: -0.96440905042746
+      RElbowRoll: -1.93601712024011
+  - name: kick back # right back 50 # move left 22
     frames: 50
     joints:
-      HeadYaw: 0.612831876036623
-      HeadPitch: -22.4978723961327
-      LHipYawPitch: -15.0024042265209
-      LHipRoll: 24.0024025189737
-      LHipPitch: -21.6072857625849
-      LKneePitch: 49.8321981938704
-      LAnklePitch: -24.6999850874207
-      LAnkleRoll: -22.1902936184406
-      RHipYawPitch: 0.00240394137389109
-      RHipRoll: -22.090291114038
-      RHipPitch: -27.6999850874207
-      RKneePitch: 70.7491191902128
-      RAnklePitch: -50.78305270743
-      RAnkleRoll: 23.0024047957034
-      LShoulderPitch: -28.7682232287897
-      LShoulderRoll: 60.2594193997858
-      LElbowYaw: -50.7934360176355
-      LElbowRoll: -50.49175425435396
-      RShoulderPitch: -89.3882951051451
-      RShoulderRoll: 28.1763378348073
-      RElbowYaw: -0.964409023590334
-      RElbowRoll: -1.93601706636553
-  - name: windup
-    frames: 100
-    joints:
-      HeadYaw: 0.612831876036623
-      HeadPitch: -22.4978723961327
-      LHipYawPitch: -40.0024042265209
-      LHipRoll: 24.0024025189737
-      LHipPitch: -21.6072857625849
-      LKneePitch: 51.8321970555055
-      LAnklePitch: -24.6999850874207
-      LAnkleRoll: -23.1902930492582
-      RHipYawPitch: -25.00240394137389109
-      RHipRoll: -24.0902916832204
-      RHipPitch: -7.69998451823831
-      RKneePitch: 70.7491123600238
-      RAnklePitch: -60.7830538457948
-      RAnkleRoll: 23.0024047957034
-      LShoulderPitch: -8.7682232287897
-      LShoulderRoll: 60.2594193997858
-      LElbowYaw: -50.7934360176355
-      LElbowRoll: -50.49175425435396
-      RShoulderPitch: -89.3882951051451
-      RShoulderRoll: 28.1763378348073
-      RElbowYaw: -0.964409023590334
-      RElbowRoll: -1.93601706636553
-  - name: kick1
-    frames: 10
-    joints:
-      HeadYaw: 0.612831876036623
-      HeadPitch: -22.4978723961327
-      LHipYawPitch: -15.0024042265209
-      LHipRoll: 24.0024025189737
-      LHipPitch: -21.6072857625849
-      LKneePitch: 49.8321981938704
-      LAnklePitch: -24.6999850874207
-      LAnkleRoll: -22.1902936184406
-      RHipYawPitch: 0.00240394137389109
-      RHipRoll: -22.090291114038
-      RHipPitch: -40.6999850874207
-      RKneePitch: 85.7491191902128
-      RAnklePitch: -50.78305270743
-      RAnkleRoll: 23.0024047957034
-      LShoulderPitch: -28.7682232287897
-      LShoulderRoll: 60.2594193997858
-      LElbowYaw: -50.7934360176355
-      LElbowRoll: -50.49175425435396
-      RShoulderPitch: -89.3882951051451
-      RShoulderRoll: 28.1763378348073
-      RElbowYaw: -0.964409023590334
-      RElbowRoll: -1.93601706636553
-  - name: kick2
-    frames: 10
-    joints:
-      HeadYaw: 0.612831876036623
-      HeadPitch: -22.4978723961327
-      LHipYawPitch: -25.0024042265209
-      LHipRoll: 24.0024025189737
-      LHipPitch: -11.6072854779937
-      LKneePitch: 55.8321981938704
-      LAnklePitch: -24.6999850874207
-      LAnkleRoll: -23.190294187623
-      RHipYawPitch: -10.00240394137389109
-      RHipRoll: -22.090291114038
-      RHipPitch: -60.6999839490559
-      RKneePitch: 45.7491055298348
-      RAnklePitch: 14.7830561225245
-      RAnkleRoll: 23.0024047957034
-      LShoulderPitch: -28.7682232287897
-      LShoulderRoll: 60.2594193997858
-      LElbowYaw: -50.7934360176355
-      LElbowRoll: -50.49175425435396
-      RShoulderPitch: -89.3882951051451
-      RShoulderRoll: 28.1763378348073
-      RElbowYaw: -0.964409023590334
-      RElbowRoll: -1.93601706636553
-  - name: left balance
+      HeadYaw: 0.612831893090224
+      HeadPitch: -22.4978798523823
+      LHipYawPitch: 0.00240422658784449
+      LHipRoll: 22.0902951008275686 #+22
+      LHipPitch: -24.607286447345
+      LKneePitch: 49.8321995805776
+      LAnklePitch: -24.6999857747604
+      LAnkleRoll: -22.0902951008275686 #-22
+      RHipYawPitch: 0.00240422658784449
+      RHipRoll: -25.00240422658784449 #-25
+      RHipPitch: 26.6999857747604 #+50
+      RKneePitch: 59.7491308198919 #+10
+      RAnklePitch: -29.7830681958245 #-5
+      RAnkleRoll: 22.00240422658784449 #+22
+      LShoulderPitch: -88.7682393593689
+      LShoulderRoll: 8.25941906044261
+      LElbowYaw: -0.793435755123701
+      LElbowRoll: -1.4917542958658
+      RShoulderPitch: -89.388297592601
+      RShoulderRoll: 58.17633749315222
+      RElbowYaw: -0.96440905042746
+      RElbowRoll: -1.93601712024011
+  - name: kick front # right front 100
     frames: 50
     joints:
-      HeadYaw: 0.612831876036623
-      HeadPitch: -22.4978723961327
-      LHipYawPitch: -15.0024042265209
-      LHipRoll: 16.0023985346968
-      LHipPitch: -18.6072857625849
-      LKneePitch: 49.8321981938704
-      LAnklePitch: -24.6999850874207
-      LAnkleRoll: -15.1902924800758
-      RHipYawPitch: 0.00240394137389109
-      RHipRoll: -15.0902950983149
-      RHipPitch: -42.6999816723262
-      RKneePitch: 52.7491055298348
-      RAnklePitch: -18.7830657986255
-      RAnkleRoll: 16.0024053648858
-      LShoulderPitch: -28.7682232287897
-      LShoulderRoll: 60.2594193997858
-      LElbowYaw: -50.7934360176355
-      LElbowRoll: -50.49175425435396
-      RShoulderPitch: -89.3882951051451
-      RShoulderRoll: 28.1763378348073
-      RElbowYaw: -0.964409023590334
-      RElbowRoll: -1.93601706636553
+      HeadYaw: 0.612831893090224
+      HeadPitch: -22.4978798523823
+      LHipYawPitch: 0.00240422658784449
+      LHipRoll: 22.0902951008275686 #+22
+      LHipPitch: -24.607286447345
+      LKneePitch: 49.8321995805776
+      LAnklePitch: -24.6999857747604
+      LAnkleRoll: -22.0902951008275686 #-22
+      RHipYawPitch: 0.00240422658784449
+      RHipRoll: -25.00240422658784449 #-22
+      RHipPitch: -74.6999857747604 #-50
+      RKneePitch: 49.7491308198919 #+10
+      RAnklePitch: -29.7830681958245 #-5
+      RAnkleRoll: 22.00240422658784449 #+22
+      LShoulderPitch: -88.7682393593689
+      LShoulderRoll: 8.25941906044261
+      LElbowYaw: -0.793435755123701
+      LElbowRoll: -1.4917542958658
+      RShoulderPitch: -89.388297592601
+      RShoulderRoll: 58.17633749315222
+      RElbowYaw: -0.96440905042746
+      RElbowRoll: -1.93601712024011
   - name: normal stand
     frames: 100
     joints:
-      HeadYaw: 0.612831876036623
-      HeadPitch: -22.4978723961327
-      LHipYawPitch: 0.00240422589561831
-      LHipRoll: -0.0902950983148785
-      LHipPitch: -24.6072857625849
-      LKneePitch: 49.8321981938704
-      LAnklePitch: -24.6999850874207
-      LAnkleRoll: -0.0902950983148785
-      RHipYawPitch: 0.00240422589561831
-      RHipRoll: 0.00240422589561831
-      RHipPitch: -24.6999850874207
-      RKneePitch: 49.7491294354963
-      RAnklePitch: -24.7830675061728
-      RAnkleRoll: 0.00240422589561831
-      LShoulderPitch: -88.7682232287897
-      LShoulderRoll: 8.2594171230561
-      LElbowYaw: -0.79343573304434
-      LElbowRoll: -1.49175425435396
-      RShoulderPitch: -89.3882951051451
-      RShoulderRoll: 8.17633726562491
-      RElbowYaw: -0.964409023590334
-      RElbowRoll: -1.93601706636553
+      HeadYaw: 0.612831893090224
+      HeadPitch: -22.4978798523823
+      LHipYawPitch: 0.00240422658784449
+      LHipRoll: -0.0902951008275686
+      LHipPitch: -24.607286447345
+      LKneePitch: 49.8321995805776
+      LAnklePitch: -24.6999857747604
+      LAnkleRoll: -0.0902951008275686
+      RHipYawPitch: 0.00240422658784449
+      RHipRoll: 0.00240422658784449
+      RHipPitch: -24.6999857747604
+      RKneePitch: 49.7491308198919
+      RAnklePitch: -24.7830681958245
+      RAnkleRoll: 0.00240422658784449
+      LShoulderPitch: -88.7682393593689
+      LShoulderRoll: 8.25941906044261
+      LElbowYaw: -0.793435755123701
+      LElbowRoll: -1.4917542958658
+      RShoulderPitch: -89.388297592601
+      RShoulderRoll: 8.17633749315222
+      RElbowYaw: -0.96440905042746
+      RElbowRoll: -1.93601712024011
 ...
+
+
+  # NExt thing not used dont consider
+  # - name: pick up leg # pick right leg 10 # right far 25
+  #   frames: 50
+  #   joints:
+  #     HeadYaw: 0.612831893090224
+  #     HeadPitch: -22.4978798523823
+  #     LHipYawPitch: 0.00240422658784449
+  #     LHipRoll: 20.0902951008275686 #+20
+  #     LHipPitch: -24.607286447345
+  #     LKneePitch: 49.8321995805776
+  #     LAnklePitch: -24.6999857747604
+  #     LAnkleRoll: -20.0902951008275686 #-20
+  #     RHipYawPitch: 0.00240422658784449
+  #     RHipRoll: -25.00240422658784449 #-25
+  #     RHipPitch: -29.6999857747604 #-5
+  #     RKneePitch: 49.7491308198919 #+10
+  #     RAnklePitch: -29.7830681958245 #-5
+  #     RAnkleRoll: 20.00240422658784449 #+20
+  #     LShoulderPitch: -88.7682393593689
+  #     LShoulderRoll: 8.25941906044261
+  #     LElbowYaw: -0.793435755123701
+  #     LElbowRoll: -1.4917542958658
+  #     RShoulderPitch: -89.388297592601
+  #     RShoulderRoll: 58.17633749315222
+  #     RElbowYaw: -0.96440905042746
+  #     RElbowRoll: -1.93601712024011
